well expect updates on pomshared