@@ -11,7 +11,7 @@
 
   <properties>
     <!-- poms shared is expected to receive upgrades on most iterations -->
-    <poms.shared.version>6.2.0</poms.shared.version>
+    <poms.shared.version>7.0-SNAPSHOT</poms.shared.version>
     <!-- these may not have -->
     <api.client.version>6.1.0</api.client.version>
     <thesaurus.version>6.0.0</thesaurus.version>
@@ -28,8 +28,7 @@
 
     <java.version>11</java.version>
 
-    <EXTRA_TEST_OPTS />
-    <!-- EXTRA_TEST_OPTS> - -add-opens java.base/java.lang=ALL-UNNAMED</EXTRA_TEST_OPTS -->
+    <EXTRA_TEST_OPTS>--add-opens java.base/java.lang=ALL-UNNAMED</EXTRA_TEST_OPTS>
   </properties>
 
   <modules>
